# akai

./: CLAUDE.md  HANDOFF.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  midi.rs
src/audio/: clock.ts  drums.ts  engine.ts  recorder.ts  synth.ts
src/components/: MixMeter.tsx  Shell.tsx  TakesPanel.tsx
src/components/device/: DeviceView.tsx  device.css
src/lessons/: content.ts  diagnostics.ts  engine.ts
src/midi/: demo.ts  midi.ts  parser.ts  profile.ts  tauri.ts  types.ts  webmidi.d.ts
src/state/: diagnosticsStore.ts  midiStore.ts  profileStore.ts  progressStore.ts  storage.ts  takesStore.ts  uiStore.ts
src/tests/: clock.test.ts  diagnostics.test.ts  lessonContent.test.ts  lessonEngine.test.ts  parser.test.ts  profile.test.ts  progressStore.test.ts  recorder.test.ts
src/views/: Home.tsx  Lesson.tsx  Playground.tsx  Settings.tsx  lesson.css
