[package]
name = "woodshed"
version = "0.1.0"
description = "Woodshed desktop app"
edition = "2021"

[lib]
name = "woodshed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
